stripping whitespace lines; CSS fixes

--- a/app/assets/stylesheets/scaffolds.css.scss
+++ b/app/assets/stylesheets/scaffolds.css.scss
@@ -3,17 +3,18 @@ body {
   color: #333;
   font-family: verdana, arial, helvetica, sans-serif;
   font-size: 13px;
-  line-height: 18px; }
+//  line-height: 18px; 
+}
 
-p, ol, ul, td {
+/*p, ol, ul, td {
   font-family: verdana, arial, helvetica, sans-serif;
   font-size: 13px;
   line-height: 18px; }
-
+*/
 pre {
-  background-color: #eee;
-  padding: 10px;
-  font-size: 11px; }
+  //background-color: #eee;
+  //padding: 10px;
+  font-size: 14px; }
 
 a {
   color: #000;
